# agent-sdk

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
examples/: otel.rs  with_primitive_tools.rs
src/: agent_loop.rs  capabilities.rs  environment.rs  filesystem.rs  lib.rs  llm.rs  memory.rs  model_capabilities.rs  observability.rs  plan_mode.rs  preset_prompts.rs  primitive_tools.rs  prompts.rs  providers.rs  reminders.rs  skills.rs  subagent.rs  todo.rs  tools.rs  types.rs  user_interaction.rs
src/agent_loop/: builder.rs  helpers.rs  llm.rs  run_loop.rs  test_utils.rs  tests.rs  tool_execution.rs  turn.rs  types.rs
src/context/: compactor.rs  estimator.rs
src/llm/: attachments.rs  streaming.rs
src/mcp/: client.rs  tool_bridge.rs  transport.rs
src/observability/: attrs.rs  context.rs  instrument.rs  payload.rs  provider_name.rs  spans.rs  types.rs
src/primitive_tools/: bash.rs  edit.rs  glob.rs  grep.rs  read.rs  write.rs
src/providers/: anthropic.rs  cloudflare_ai_gateway.rs  gemini.rs  openai.rs  openai_codex_responses.rs  openai_responses.rs  vertex.rs
src/providers/anthropic/: data.rs
src/providers/gemini/: data.rs
src/skills/: builtin.rs  loader.rs  parser.rs
src/subagent/: builtin.rs  factory.rs  task_tool.rs
src/web/: fetch.rs  search.rs  security.rs
tests/: observability_integration.rs
