[package]
name = "agent-sdk"
version = "0.8.0"
edition = "2024"
description = "Rust Agent SDK for building LLM agents"
license = "Apache-2.0"
repository = "https://github.com/bipa-app/agent-sdk"
readme = "README.md"
keywords = ["agent", "llm", "ai", "anthropic", "tools"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tokio = { version = "1.40", features = ["sync", "fs", "process", "time", "macros"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
regex = { version = "1.10", default-features = false, features = ["std", "unicode-perl"] }
glob = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "std", "formatting", "parsing"] }
reqwest = { version = "0.13.1", features = ["gzip", "json", "query", "default-tls", "stream", "http2"], default-features = false }
async-stream = "0.3"
bytes = "1"
log = "0.4"
url = "2"
tokio-util = "0.7"
html2text = "0.14"
base64 = "0.22"
tokio-tungstenite = { version = "0.28", features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
opentelemetry = { version = "0.31", default-features = false, features = ["trace"], optional = true }

[features]
default = []
otel = ["opentelemetry"]

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11"
tempfile = "3"
opentelemetry_sdk = { version = "0.31", features = ["testing"] }

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "custom_tool"
path = "examples/custom_tool.rs"

[[example]]
name = "custom_hooks"
path = "examples/custom_hooks.rs"

[[example]]
name = "with_primitive_tools"
path = "examples/with_primitive_tools.rs"

[[example]]
name = "otel"
path = "examples/otel.rs"
required-features = ["otel"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
